@@ -1,3 +1,7 @@
+2005-02-13  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (libasprintf.la): New rule. Needed for BeOS.
+
 2005-02-12  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.msvc (install): Update for 2004-01-18 change.
